@@ -1,3 +1,7 @@
+2013-03-14 Tsi YANG  <tsi@in-cite.net>
+	* Feature: Added tx_icsodappstore_month_logs TCA
+	* Feature: Added locallang key fr version
+
 2012-09-20 Tsi YANG  <tsi@in-cite.net>
 	* Release 1.1.3
 
